--- a/src/clustering_methods.ipynb
+++ b/src/clustering_methods.ipynb
@@ -57,7 +57,7 @@
     "        nxgraph (networkx.Graph): a networkx graph object\n",
     "\n",
     "    Returns:\n",
-    "        sorted list of nodes and corresponding clusters - MAKE MORE SPECIFIC\n",
+    "        sorted list of nodes and corresponding clusters \n",
     "    \"\"\"\n",
     "    # Louvain clustering\n",
     "    partition = community.best_partition(nxgraph)\n",
@@ -73,8 +73,8 @@
     "    # write out cluster information\n",
     "    for i, cluster in enumerate(clusters):\n",
     "        for node in cluster:\n",
-    "            cluster_data.append((i,node)) #make consistent outputs across all clustering method\n",
-    "    return cluster_data"
+    "            cluster_data.append((i,node)) \n",
+    "    return cluster_data\n"
    ]
   },
   {
@@ -226,7 +226,7 @@
     "            for k in range(len(list(list(comp)[j]))):\n",
     "                curnode = ((list(list(comp)[j]))[k])\n",
     "                cluster_data.append((j,curnode))\n",
-    "        return cluster_data #format these all to have similar returns - currently returns sets of nodes  sets = comp[0], comp[1], etc\n",
+    "        return cluster_data 
     "    else:\n",
     "        return 0 #replace with try/catch structure?"
    ]
