Updated Clustering Methods

--- a/src/clustering_methods.ipynb
+++ b/src/clustering_methods.ipynb
@@ -10,7 +10,7 @@
     "# Clustering Methods\n",
     "General questions: \n",
     "- Output of all is currently tuple - should this be a matrix or dictionary? Do we want number of clusters? Number of nodes?\n",
-    "- Data structures in Python - what format are nodes in? What kind of structure is best to store these values? Are they numbered nodes?\n",
+    "- Data structures in Python - What kind of structure is best to store these values?\n",
     "- Speed/efficiency of code"
    ]
   },
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "def louvain_clustering(nxgraph): #do i need a self here? -FOR THIS TO WORK HAD TO RUN SETUP FILE....\n",
+    "def louvain_clustering(nxgraph):\n",
     "    \"\"\"\n",
     "    Use Lovain Clustering to find communities for all nodes in forest.\n",
     "\n",
@@ -57,7 +57,7 @@
     "        nxgraph (networkx.Graph): a networkx graph object\n",
     "\n",
     "    Returns:\n",
-    "        sorted list of nodes and corresponding clusters \n",
+    "        sorted list of nodes and corresponding clusters - MAKE MORE SPECIFIC\n",
     "    \"\"\"\n",
     "    # Louvain clustering\n",
     "    partition = community.best_partition(nxgraph)\n",
@@ -66,15 +66,13 @@
     "    for com in set(partition.values()):\n",
     "        list_nodes = [nodes for nodes in partition.keys() if partition.keys() if partition[nodes] == com]\n",
     "        clusters.append(list_nodes)\n",
-    "    clusters.sort(key=lambda a: -len(a)) #do we need this step?\n",
-    "    #print(\"%d clusters found with sizes:\" %len(clusters))\n",
-    "    #print [len(x) for x in clusters]\n",
+    "    clusters.sort(key=lambda a: -len(a)) \n",
     "\n",
     "    # write out cluster information\n",
     "    for i, cluster in enumerate(clusters):\n",
     "        for node in cluster:\n",
-    "            cluster_data.append((i,node)) \n",
-    "    return cluster_data\n"
+    "            cluster_data.append((i,node))\n",
+    "    return cluster_data"
    ]
   },
   {
@@ -226,7 +224,7 @@
     "            for k in range(len(list(list(comp)[j]))):\n",
     "                curnode = ((list(list(comp)[j]))[k])\n",
     "                cluster_data.append((j,curnode))\n",
-    "        return cluster_data 
+    "        return cluster_data \n",
     "    else:\n",
     "        return 0 #replace with try/catch structure?"
    ]
