Ludwig changed things very slightly since last time.

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -2,29 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "04:58:34 - Forest: INFO - Members of the prize file not present in the interactome:\n",
-      "04:58:34 - Forest: INFO -         name  prize\n",
-      "-1     CALM1   2.68\n",
-      "-1  KIAA1543   0.64\n",
-      "-1      PKM2   0.28\n",
-      "-1     PLEC1   1.35\n",
-      "-1     RBM14   0.31\n",
-      "-1     SFRS1   0.67\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -262,7 +247,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
