woops -- little bug

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -14,10 +14,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06:14:16 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "06:14:16 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
-      "06:14:16 - Forest: INFO - Members of the prize file not present in the interactome:\n",
-      "06:14:16 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
+      "04:50:19 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "04:50:19 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
+      "04:50:19 - Forest: INFO - Members of the prize file not present in the interactome:\n",
+      "04:50:19 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
      ]
     }
    ],
@@ -38,11 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -101,7 +102,7 @@
        " 12748]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -145,7 +146,7 @@
        "       12463, 12499, 12505, 12745, 12748, 16371], dtype=int32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -176,7 +177,7 @@
        "        54421, 126268, 240545], dtype=int32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -197,10 +198,10 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x10d38c2e8>"
+       "<networkx.classes.graph.Graph at 0x10f8d2518>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -243,7 +244,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAdgAAAFCCAYAAABSJMy8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XtU1XW+//HXBlQ2ZkoesWjSOnU6lUmXgUptCvOnJV4m\nPFqYvxROlpHTZRRP8ZvTVJ46pjLWNCVpTQJTg6OW9wuaJpppocuC5VjmWJldBqccMtyIwP798Ym8\npAjs73d/v3vv52OtlgvZfPZ7rXH2i8/l+/54/H6/XwAAwFJRThcAAEA4ImABALABAQsAgA0IWAAA\nbEDAAgBgAwIWAAAbELAAANiAgAUAwAYELAAANiBgAQCwAQELAIANCFgAAGxAwAIAYAMCFgAAGxCw\nAADYgIAFAMAGBCwAADYgYAEAsAEBCwCADQhYAABsQMACAGADAhYAABsQsAAA2ICABQDABgQsAAA2\nIGABOGPxYqlLFykmRoqKMn926SItW+Z0ZYAlPH6/3+90EQAiyNix0pw5UkPDqV8TFSVlZUkvvxy8\nugCLEbAAgqd7d2nv3ua/vls36bPP7KsHsBFLxACCo6XhKpnXd+9uTz2AzQhYAPYbO7bl4dpo717p\nnnusrQcIApaIAdgvOrrpPdfTiYqS6uutqwcIAmawAOy1eHFg4SqZn+d0MUIMM1gA9urSRfrHP6wZ\np7Iy8HGAICFgAdgrJsaa5d2YGOnIkcDHAYKEJWIA9gp0ebgRe7AIMQQsAHtFWfQxEx1tzThAkBCw\nAOwVH++ucYAgIWAB2Ou3v7VmnCeesGYcIEgIWAD2mjfPmnGKi60ZBwgSThEDsJfXK9XUBD5ObKzk\n8wU+DhAkBCwAewXaxakR3ZwQYlgiBgDABgQsAHu1a+eucYAgIWAB2Cs52ZpxUlKsGQcIEgIWgL0m\nTrRmnEmTrBkHCBICFoC9Zs2yZpz8fGvGAYKEgAVgr5073TUOECQELAB7HTpkzTjV1daMAwQJAQvA\nXlY16W/f3ppxgCAhYAHYy6rmEJdeas04QJDQyQmAfSorpfPOk2prAx/rr38lZBFSmMECsE9BgTX3\nwZ55JuGKkEPAArBPebk1jf4vvzzwMYAgi3G6AAAtVFlpZobl5VJVldSxo5SUJGVlSV26OF3d8aqq\nrBnnrLOsGQcIIgIWCBVlZdKUKdLKlebrY2eGb7whPfaYNHCglJvrnraCHTtaM058vDXjAEHEEjEQ\nCvLzpdRUadEiE6wnLrv6fObvFi0yr3NL16N//Vd3jQMEETNYwO3y86WcnOY1bPD7zetycszX2dn2\n1hYsPOyAEMQMFnCzsrLmh+uxGkN261Z76mquPXusGeeTT6wZBwgiAhZwsylTzPJva/h85uedZNUh\npwMHrBkHCCICFnCrykpzoKm1y6N+v7RihbR/v7V1tQSHnBDBCFjArQoKAh+jvt6acVrhyJEj2hET\no8OBNprweqWePa0pCggiAhZwKyuaNBw5Ir31ljX1NNMHH3ygCRMm6LzzztN/7dih6EAD1u+XMjMt\nqQ0IJgIWcCur9i+3b7dmnCZUVlbq2Wef1VVXXaUhQ4YoLi5OGzZs0PKyMsUMGSJ5PK0b2OOR0tLc\n10ADaAYe0wHcyqr9y8pKsw9rcUjV1tZq2bJlKiwsVGlpqYYOHaq8vDz17dtXUcfOWnNzpZKS1t0L\n6/WanwdCEDNYwK2SkqQYC34HjoqybB/W7/dr27Ztuv/++3Xuuefqueee06233qrPP/9cRUVF6tev\n3/HhKpmuUnl5Ulxci97L5/Go+oknpORkS2oHgo2ABdwqM1NqaAh8nLo6qaIioCG++uorTZ8+XT17\n9tSIESP0L//yL3rvvfe0fv16ZWVlqUOHDk0PkJ19NGRPt1zs8UhxcVp+0026edEi+Vr7mBLgMAIW\ncKuEBPOfFVrxHGlNTY3+8pe/KC0tTZdddpk+/PBDzZw5U7t379Zjjz2mCy64oGUDZmdLpaVSeroU\nG2uWf4/l9Zq/T0+XSks1bPVqnX/++crIyFBdXV2L6wecxoXrgJsNHCitWhX4OHfeKRUVnfZlfr9f\n7777rgoKCjR//nxdffXVGjNmjNLT09W+ffvA62i0f79Ztq6oMOEfH28excnMPG6vuLa2VkOGDFG3\nbt00e/ZseVp7WApwAIecADfr21d6802zzNtazXiO9PPPP9ef/vQnFRYWSpLGjBmj999/X+edd17r\n37cpXbpIkyad9mVt27bVggUL1LdvXz322GOaPHmyPfUANmAGC7hZZaXUvXtgz8PGxkp79/7kFPGh\nQ4e0cOFCFRQUaNu2bbrttts0ZswYXXfdda6bKVZWVqpPnz769a9/rfvuu8/pcoBmYQYLuFlCglkm\nXrSo9S0TL7nkx3D1+/16++23VVBQoDfeeEO9evXS2LFjtWTJEnlP3BN1kYSEBJWUlOgXv/iFEhIS\nNHz4cKdLAk6LGSzgdmVl0g03tH4W266dvpw3Ty+//74KCwsVGxurzMxMjRo1SomJidbWarPt27dr\nwIABmj9/vlJTU50uB2gSAQuEgiuvlD74oFU/2iBpeZs2Wj1unMaMGaOf//znrlsCbol169YpIyND\na9as0RVXXOF0OcApEbCA21mwD+tv106ezz8Pm5aD8+bN04QJE/T222/r/PPPd7oc4KR4DhZwOwu6\nMHks7ObkBrfddpsefvhh3Xzzzdrv5HV8QBMIWMDtrLhVx+cLuJuT29x///36j//4Dw0ePFjV1dVO\nlwP8BAELuJ1Vt+q0opuT2z311FPq0aOHRowYoSNHjjhdDnAcAhZwO6tu1YmPt2YcF/F4PJo9e7ai\noqI0duxYcaQEbkLAAm6XlGSaRQSiGd2cQlVMTIzmzZunXbt26ZFHHnG6HOBHnCIG3K6yUv5u3eQ5\nfLj1Y5yim1M4+eabb3T99ddr3Lhxeuihh5wuB6CTE+B2b+/apUMxMfo/hw+3bsnJ45HS0sI6XCWp\nc+fOKikpUZ8+fdS1a1eNHDnS6ZIQ4VgiBlyqpqZGOTk5uu2229Tu8ccV1cILy3/k9Uq5udYW51Ld\nunXTihUr9NBDD2nNmjVOl4MIR8ACLlRWVqarr75an332mcrLy3VjTs7RC8tbIi7O/Fxysj2FulDP\nnj01f/58jRo1Stu2bXO6HEQw9mABF6mtrdWTTz6pWbNm6fe//71uv/3249sa5udLOTnmudam/q/r\n8ZiZa16eueg8Ai1cuFDjx4/Xxo0bdeGFFzpdDiIQe7CAS1RUVGj06NH62c9+pvfff1/nnHPOT1+U\nnS2lpEhTpkgrVpgg9fmOft/rNcGblmaWhSNo5nqi9PR0VVZW6uabb9amTZvUtWtXp0tChGEGCzis\nrq5O06dP14wZMzRt2jRlZmY2rxn//v2m/WFFhWkiER9vHsXJzAz7A00t8fjjj2vp0qVav369OnTo\n4HQ5iCAELOCgDz/8UGPGjFGHDh30yiuvqFu3bk6XFHb8fr/uvfde7dmzR8uXL1fbtm2dLgkRgkNO\ngAMaGhr07LPP6vrrr9eYMWO0evVqwtUmHo9HM2fO1BlnnKHMzEw1NDQ4XRIiBDNYIMg++eQTZWVl\nqa6uTgUFBbroooucLiki+Hw+3Xzzzbr66qv1zDPPhPSduAgNzGCBIPH7/Zo9e7auueYaDR48WKWl\npYRrEHm9Xi1evFhr167VtGnTnC4HEYBTxEAQ7Nu3T2PHjtU333yj0tJSXXbZZU6XFJHi4+O1cuVK\n9enTR2effbbGjBnjdEkIY8xgARv5/X4VFRXp6quvVp8+ffTOO+8Qrg772c9+plWrVunhhx/WihUr\nnC4HYYw9WMAmf//73zVu3Djt2bNHhYWFuuqqq5wuCcfYvHmzhg4dqmXLlunaa691uhyEIWawgA0W\nLFigK664QpdddpnKysoIVxfq1auXCgoK9Mtf/lIfffSR0+UgDDGDBSz07bff6le/+pW2bdumwsJC\nXXfddU6XhNOYM2eOJk+erE2bNikxMdHpchBGOOSEyFZZabohlZdLVVVSx47mgvOsrBZ3Q1q+fLnu\nuecejRgxQtu3b1dca2+/QVBlZWXp66+/1i233KINGzaoU6dOTpeEMMEMFpGprMz081250nxdU3P0\ne439fAcONP18U1KaHKqqqkoTJkzQunXrNGfOHKWmptpXN2zh9/v14IMP6oMPPlBJSYliY2OdLglh\ngD1YRJ78fCk1VVq0yATrseEqmeb5NTXm+zfeaF5/CmvXrlVSUpLatGmj8vJywjVEeTwePfvsszr7\n7LM1atQo1dfXO10SwgAzWESWxuveDh1q/s9ER0sTJ0pTp/74V9XV1Xr44Ye1ePFivfTSS7rlllts\nKBbBdvjwYaWlpenf//3f9cILL9DtCQFhBovIUVbW8nCVpPp6ado06ZFHJEmbNm3SFVdcoe+++07l\n5eWEaxhp166dFi5cqM2bN+vJJ590uhyEOGawiBzDhpll31b+k/dHRWlhv34aX1GhmTNnKj093eIC\n4RZff/21evfurdzcXN19991Hv2HhoTiEPwIWkaGyUure/af7rS1UExUl36pViu/f36LC4FYff/yx\nbrjhBr344ov6ZWKiZYfiEDkIWESGadOkxx4LOGD9kjzDhkmvv25NXXC1rVu36i99++rpI0cUXVvb\n9OqHx2PCNi9Pys4OXpFwLZ6DRWQoLw84XCXJI0krVkj797MkGAGSy8p01ZEjij58+PQv9vvN/n5O\njvmakI14HHJCZKiqsm4sj8fswyG8/XAorlnheqzGkN261Z66EDIIWESGjh2tG8vnkyoqrBsP7jRl\nivnfujV8PvPziGgELCJDUpJkZXeeAwesGwvuU1lpDjS19oiK3390KwERi4BFZMjMtHa8+Hhrx4O7\nWLEFwFZCxCNgERkSEsxjFFZ05vF6pZ49Ax8H7mXFoTi2EiIeAYvIkZtrzTKx32/9jBjuYtWhOLYS\nIhoBi8iRkiL97nemt3BreTxSWhqP6IQ7qw7FsZUQ0QhYRJbsbP1t2DC1uruK12tmwghvVhyKYysh\n4hGwiBh+v19/+MMfdP3Gjfr8jjukqBb+84+LM116kpPtKRDuYcUWAFsJEY+ARUQ4cuSIxo8fr1mz\nZumdd95Rt9dek55/3swyTsfjORqudOeJDIEeimMrAaIXMSLAgQMHNGLECLVr107FxcU688wzj35z\n61bTEGDFCvOheGxjgcYm7mlpZlmYmWtkKSuTUlNbfr2hZH4hKy3l30yEI2AR1j7++GMNHjxYgwYN\n0vTp0xV9qgNO+/ebZxYrKszJz/h4s3+WmcksJJLl57f4DuHamBi1fe45VjtAs3+Er3Xr1mnkyJF6\n8sknj7/T82S6dJEmTQpOYQgdjSGZk2NWN05zm44/Nlb/26GDukoiXsEeLMLSrFmzNHLkSM2dO/f0\n4Qo0JTvbLPemp5uTxSfu23u95u/T0+XZsEH/d9MmPfHEEyopKXGmXrgGS8QIK3V1dcrJydGqVau0\ndOlS/du//ZvTJSGcNHMrYcOGDRo+fLjeeust9ejRw7Fy4SwCFmGjqqpKGRkZqq+v17x589SpUyen\nS0IEKyoq0uOPP64tW7YoISHB6XLgAJaIERb27Nmj3r1768ILL9SKFSsIVzhu9OjRuuOOO3Trrbeq\nJtC+xghJzGAR8jZs2KDbbrtNjz76qMaPH+90OcCPGhoalJGRoZiYGL322mvyWHHZBEIGM1iEtDlz\n5mj48OEqKioiXOE6UVFRKiws1J49e/TEE084XQ6CjMd0EJLq6+v1yCOPaNGiRdqwYYMuueQSp0sC\nTsrr9Wrx4sW69tprdfHFF+uOO+5wuiQECQGLkHPw4EGNGjVKBw8e1JYtW9S5c2enSwKa1LVrVy1d\nulT9+vVT9+7d1adPH6dLQhCwRIyQ8tlnn+n6669X165dVVJSQrgiZPTs2VOFhYUaPny49uzZ43Q5\nCAICFiFj8+bN6tWrlzIzMzV79my1bdvW6ZKAFhk4cKB+85vfaPDgwfrnP//pdDmwGaeIERJeffVV\nTZgwQXPmzNGgQYOcLgcIyP3336+PPvpIy5cvV5s2bZwuBzYhYOFqDQ0NevTRR1VcXKwlS5bo8ssv\nd7okIGB1dXUaOnSounXrpvz8fB7fCVMELFyrurpao0ePVmVlpd544w114VYbhJHvvvtOffr00X/+\n53/q17/+tdPlwAbswcKV9u3bpxtuuEEdOnTQm2++Sbgi7Jx55platmyZpk+frqVLlzpdDmzADBaB\nq6w0DdDLy6WqKqljRykpScrKatVdqmVlZUpPT9cDDzygSZMmsXyGsPbuu+9q8ODBWrNmja688kqn\ny4GFCFi0XlmZNGWKtHKl+frYfqtRPyyOXHqpNGOGNGBAs4acN2+exo8fr5deekm33nqrxQUD7jRv\n3jzl5ORoy5YtSkxMdLocWISARevk5zfvEupGHTpIffpIffuedGbr9/s1efJkvfLKK1q8eDG/ySPi\nPPXUU1q4cKFKS0vVvn17p8uBBQhYtFxjuB461PKfjYkx/w0cKOXmSikp8vl8ysrK0qeffqpFixbp\n7LPPtr5mwOX8fr8yMzP1/fffa/78+YqK4ohMqCNg0TJlZVJqauvC9Vgej+T16p+PPqoBb7yhiy66\nSH/84x/l9XotKRMIRYcPH1b//v3Vu3dvPf30006XgwARsGiZYcOkRYuatyzcDIc8Hq0fNEgDlyzh\nMBMg6R//+Ieuu+465ebm6q677nK6HASAgEXzVVZK3bsff5jJCnFxUmmplJxs7bhAiPrwww914403\nau7cuerbt6/T5aCVWORH8xUU2DOuz2dOIwOQJF1yySUqLi5WRkaGdu3a5XQ5aCUCFs1XXm797FUy\ny80rVkj791s/NhCibrrpJj311FMaNGiQvvnmG6fLQSsQsGi+qir7xvZ47JshAyFq7NixSk9P17Bh\nw3T48GGny0ELEbBovo4d7Rvb55MqKuwbHwhRTz/9tM466yyNGzdOHJkJLQQsmi8pSYqNtW/8Awfs\nGxsIUVFRUXr11VdVUVHBozshhoBF82Vm2jt+fLy94wMhqn379lqyZIlmzpypBQsWOF0OmomARfMl\nJJgOTHY8r+r1Sj17Wj8uECbOPfdcLVmyRNnZ2XrvvfecLgfNwHOwaBmrOjmdKDZW2ru3VbfvAJGk\nMWQ3b96sbt26OV0OmsAMFi2TkiLl5Vm7F+vxSGlphCvQDEOHDtWECRM0ePBgHTx40Oly0ARmsGid\n/HzpoYek2trAx6KTE9Aifr9f9957r/bt26fFixcrJibG6ZJwEsxg0TrZ2dKmTdIP18q1+re0uDgz\nIyZcgWbzeDx6/vnnVVtbq4kTJzpdDk6BgEXrJSdL27erav58fdyuneo9nuYfgPJ4joZrdra9dQJh\nqE2bNpo/f75Wr16tmTNnOl0OToKARUAOHDig1Kee0isPPaSor7+Wpk41J43PPluKijJ3vx7L6zX7\nt+npZlmYcAVarVOnTlq2bJkmT56skpISp8vBCdiDRatVVVWpf//+6tOnj2bMmPHT6+b27zftDysq\nTBOJ+HjzKE5mJgeaAAu9/fbbGjZsmNatW6fLL7/c6XLwAwIWrXLw4EHdcsstuvLKK/X8889zlyvg\nsNdee03//d//rS1btqhr165OlwMRsGiF6upqpaWl6eKLL9asWbMUFcVOA+AGv/3tb7VmzRqtW7dO\nXq/36DcqK81qUnm5ubSjY0fT+jQri9UkGxGwaBGfz6chQ4YoMTFRBQUFhCvgIn6/XyNHjpTH49Gf\n//xnebZuNXctr1xpXnDsdZNer7kqcuBAKTfXPOMOSxGwaLbDhw/r1ltvVadOnfTqq68qOjra6ZIA\nnMDn8+mmm27S/zvrLA1Zv97cVNXUx7zHY8KWE/2WI2DRLLW1tRoxYoRiYmI0d+5ctWnTxumSAJzC\nd1OnKiY3V3Et+XjnsTnLEbA4rbq6OmVkZKi2tlYLFixQ27ZtnS4JwKkE0i+crmqWImDRpPr6et15\n55369ttvtXjxYrVr187pkgA0ZdgwadGippeFT8XjMXuyN97IgSgLELA4pYaGBt11113au3evli1b\ndvypRADuU1kpde9+/GGm1oiNPX6MxsOMl14qzZghDRgQ2PgRgiOgOCm/36/s7Gz97W9/05IlSwhX\nIBQUFFgzzokB3dBg/tuxQ7r5ZnMoauxY00wGp0TA4if8fr8eeOABlZeXa/ny5Wrfvr3TJQFojvLy\nwGevzVFTI/3xj1JCgunQNm+e/e8ZgghYHMfv9ysnJ0ebN2/WypUr1aFDB6dLAtBcVVXBf89//lO6\n/XbpjDOkwsLgv7+LEbD4kd/v129+8xutXbtWq1evVqdOnZwuCUBLdOzo3HtXV5s+4yNHOleDyxCw\n+NHkyZO1ZMkSvfnmmzrrrLOcLgdASyUlmQNKTpo7l5D9AaeIIUl6+umnVVBQoNLSUhqFA6HKqlPE\nVigslEaPdroKRzGDhZ555hm9/PLLWrt2LeEKhLKEBPMcqxtut8rNdboCxxGwEe6FF17Qc889p3Xr\n1uncc891uhwAgcrNNY/ROO3LL6WdO52uwlEEbAR76aWXNHXqVK1bt07dunVzuhwAVkhJMT2F4+Kc\nrkTKyXG6AkfFOF0AnFFYWKgnnnhCb731li644AKnywFgpcaG/Tk5p79Nx04RPoPlkFMEKi4u1sSJ\nE7V27VpdeumlTpcDwC6N98GuWGH2ZX2+H791JCZGMXV1snW39owzpIMH7XwHVyNgw0VlpWmTdpoG\n3a+//rrGjx+vNWvWqGfPns7VCyB49u83nw8VFdKBA1J8vGouvlgbJk9W/yNH7A3ZO++UiorsfAfX\nImBDXVmZ+Q115Urz9bHH871eszQ0cKCUm6slX32lu+++W6tWrdJVV13lTL0AXGPGyJH61YIFaltX\nZ+8bDRgglZTY+x4uRMCGsvz85u2xeDyqa9tWuW3a6LZ165SSkhK8GgG41u7du/XilVdqel2dPIcP\n2/tmvXtLmzbZ+x4uwyniULRjh3T55dJ995lLlU/3O5Lfr5jDh/V0XZ1Stm4NTo0AXO+iiy7SR337\natPw4VKbNva+2TvvmFW1COpXTMCGih07zJ5qdLQJ1x07WjxEdE2NmfESsgB+8OCDDyr7gw/k37RJ\nsrv/eE1NRPUrJmDdrrBQSkw0oVpRYe5kDITPZ/ZsAUBSv379VF9fr/Xff2+aVNg9k5VMv+IIuLSd\nPVg3GznS/EO0WmystHfvcaeLAUSuF198USUlJVo4a1ZwexmPHh3WS8bMYN3KrnCVzPNwBQX2jA0g\n5Nx5553auHGjPqmuDm4v46Ii6eGHg/NeDiBg3aiw0L5wlcwycUWFfeMDCCnt27dXVlaWZs6cGfxe\nxtOmSY88Erz3CyKWiN0oMVH66it732PwYGnpUnvfA0DI+PTTT5WcnKzPPvtM7YuKzIHIQ4eC8+bR\n0dIf/nC0xWOYYAbrNjt22B+ukhQfb/97AAgZ559/vn7xi1/oT3/6kwm6xgsDgrFcXF8vTZwYdk84\nELBuM2mS/e/h9Uq0SQRwggceeEDPPfec/H6/CdnSUik9XWrb1v43r6kJuyccCFi3CcbtE36/eRYN\nAI6Rmpqq6OhorV271vxFcrL0+uvSvn0maO3k95tLCfbvt/d9goiAdRu79zw8HiktjUd0APyEx+PR\ngw8+qN///vfHf6NLF+mNN0zjfnsLCKsnHAhYt7H7kmSv15wSBICTuOOOO7Rlyxbt3r37p98sKrK3\nQUSYPeFAwLqNnfezxsWZgwvJyfa9B4CQFhcXp7vuuksvvPDCyV9QUiL1729fAQcO2Dd2kBGwbjN9\nuvVjejxHwzXMjsEDsN59992noqIiHTzVZemrV5suTHYIoyccCFi36dFDOucc68aLiTGHE0pLCVcA\nzdKtWzfddNNNKmyqjWFhoTRzprVvHGZPONBowo0KC6055XvFFdKaNRxoAtBiGzdu1NixY7WztFRR\nRUVSeblUVSV17Ghu9srKMp8tW7eag5NWnP4Nsz7pBKxbBdqLOCNDKi62rh4AEcX/3nt6a8AA3Xjo\nkKKjo4+/AMDrNY/VDBxoDk2mpEi33y7Nm9f6N/R4zGrb668HXrxLsETsVsXFJiRbKjHRzIAJVwCt\nlZ8vT9++Sv3uO0UfOfLT23V8PvN3ixZJqalSfr70l79I//VfrX/PMHzCIcbpAtCE4uIff0P0f/ml\nJOmkTcuiosx9sXPn2nsKGUD4y8//sQ/xaWdgfr95dj8nx3w9daqZieblmfaHzRWmTziwRBwCtm/f\nrvtuukklPXvqzH37pOpqqX17E6Z5eYQqAGuUlZkZaWsa3sTFmcOUyckmpCdONLPcpiLG4zEz1zB9\nwoGAdblvv/1WycnJmjJlim6//XanywEQzoYNM8u+rYmFE/dQt241vYVXrDDf8/mOvrZxDzctzSwL\nh9nMtREB62L19fUaNGiQevTood/97ndOlwMgnFVWSt27/3S/tSVOdgp4/37T/rCiwjSRiI83j+Jk\nZobNaeFTYQ/WxR5//HHV1NRo6tSpTpcCINxZ0QO4sZfwsbeCdekSnFvCXIiAdanFixeroKBAW7du\nVUwM/zMBsFl5eWCzVynsegkHik9uF9q1a5fuvvtuLVmyRF27dnW6HACRoKrKmnHCqJdwoHgO1mW+\n//57paen63/+53903XXXOV0OgEjRsaM144RRL+FAEbAu4vf7ddddd+naa6/VPffc43Q5ACJJUpI5\npBSIMOslHChOEbvIjBkz9Oc//1kbN26U1+t1uhwAkcSuU8QRjD3YYKmsNKfrTtEwe/369Zo2bZre\nffddwhVA8CUkmM5xgTwHm5ZGuB6DGazdysrMw9YrV5qvT9Iw25eaqvSyMk0sLlZ/Oy8yBoCmWNXJ\nCZLYg7VXfr75x7pokQnWUzTMbrtqlZZ+9536797tSJkAIMncipOXZ8KyJcK0l3CgWCK2S36+NGFC\ns/YzoiVzY0Vjw+ww7MkJIEQ0fv7k5JhJQAT3Eg4US8R2eOwxafLk1v0syywA3KCJXsINsbGqralR\n9JAhavOl7UuWAAAJF0lEQVTb3/J5dQoErNUCvSg9DC8dBhDCTtFLOHP9evUaOlTjxo1zukLXImCt\nFGi4NuKoOwCXW7NmjSZNmqTt27fL4znpTdURj0NOVikstCZcpaMNswHApfr166fvv/9eW7ZscboU\n1yJgrZKba91YNMwG4HJRUVG69957lZ+f73QprsUpYivs2CF99ZW1Y9IwG4DLZWVl6cILL9Q333yj\nzp07O12O6zCDtYIddx3SMBuAy3Xu3FlDhw5VAVtaJ0XAWmHnTmvHo2E2gBBx77336sUXX1RDQ4PT\npbgOAWuF1rQVa4rfL2VmWjsmANigV69eiouL07p165wuxXUIWCu0tK1YU2iYDSCEeDweZWdnc9jp\nJAhYK1x6qXVjeb3WnkgGAJuNGjVKb731lr744gunS3EVAtYK06dbM05sLA2zAYScDh066Pbbb9fL\nL7/sdCmuQicnqyQmBv6ozsyZNMwGEJLKy8uVlpamTz/9VDExPAEqMYO1zpQpgf38448TrgBCVlJS\nkrp3765ly5Y5XYprELBWGTNGyshQq5YDMjLMDTwAEMLo7HQ8logttvuaa3RhWZkkqVntrzMypOJi\nW2sCgGCoqanReeedp82bN+uiiy5yuhzHMYO10K5du9Trk0/0xVNPyZOY2PSLExPNBQGEK4AwERsb\nq8zMTM2ePdvpUlyBGaxFamtr1adPH2VmZmr8+PHmL3fulHJyzJ/V1VL79uaRnrw8ax/tAQCX2L17\nt3r37q29e/cqNjbW6XIcRcA2V2WluUKuvFyqqpI6dpSSkqSsLKlLF+Xm5qqiokJLly7lbkQAEW3A\ngAG6+5e/1Ijq6lN+ZkYCAvZ0ysrMCeGVK83XNTVHv+f1Sn6/9icna/TOnSr861+VkJDgTJ0A4AZl\nZfry/vvV+b331K5du5N+ZmrgQNNQJyXFuTqDgIBtSn6+WeL1+cw/ilOol+Rv104xzzzDozYAItcP\nn5l+n0+epqLF4zFhm5cX1p+ZPA18Ko3h2oxG/tGSdPiweb0U1v9gAOCkjvnMPO0mmd9vPlvD/DOT\nGezJlJVJqamtuyUnLk4qLaXdIYDIwWfmSfGYzslMmWKWhVvD5wu8qxMAhJJAPjMPHQrbz0xmsCeq\nrJS6dz9+Y76lYmOlvXsj5qQcgAhmxWemxyP9/e9h95nJDPZEBQWBj+HxWDMOALidFZ91fr/Uv3/g\n47gMAXui8vLAfhOTzFJJRYU19QCAm1nxmSlJH3wgFRUFPo6LELAn2rfPmnEOHLBmHABws6oq68bK\nzbVuLBcgYBsVFpr+wKWl1owXH2/NOADgZh07WjfWl1+a1rJhgoCVpJEjpczMwC9Mb+T1Sj17WjMW\nALhZUpI52GmVxmdjwwCniEeOlObOtXZMThEDiBRWnCI+1gUXSHv2WDOWwyJ7BltYaH24ejxSWhrh\nCiAyJCSY3sJWqa62biyHRfYMNjHRumXhRmHclQQATqqsTLrmGmvGYgYbBnbssCdc8/IIVwCRJSVF\n6tHDmrHC6K7syJ3BWjl7jZCbIQDglHbskC6/PPBx/vrXsAnZyJzBjhxp7ew1Pd0sCxOuACJVjx7S\nOecENkZiYtiEqxSJAWv1waYuXaTXX2dZGAACbdofZk3/I2+J2OqDTWG0IQ8AAWvto48ZGVJxsfX1\nOCiyZrB2HGwKo+UMAAhYcbEJy5YIw3CVIm0Gm5YmrVxp7ZhhtCEPAJYpKjK9hb/88iffagwdT4cO\n5mBU586m5WJSkpSVFTZ9BCIrYC+4QPr0U+vGS0yUvvjCuvEAINzs3GnaH+7caZpIxMToSE2N6r/9\nVu1iY+U5tgOU12uurhs40IRzSopzdVsgsgK2a1fT1ssqhYXS6NHWjQcA4Sw/34Stz2eC9FTC5NHH\nGKcLCKq4OOvGysggXAGguRrD9dCh07/W7zeva2z8H6IhG1kzWKv2YM8556T7CgCAkygrk1JTmxeu\nJwrh9rORdYp4+nRrxlm71ppxACASTJliloVbw+cL2edjI2sGKwX+HCwHmwCg+ay4zi5ErwCNrBms\nRKcRAAimgoLAx/B4rBknyCIvYMeMaflD0I042AQALVNeHvhl7D6fVFFhTT1BFHkBK9FpBACCparK\nmnG2b7dmnCCKzICVTFgWFpo91aYkJprXEa4A0HIdO1ozzs6d0tat1owVJJEbsJJZ7v3iC9PuMC3N\ndHpKSDB/pqWZv//iC5aFAaC1kpLMIaVANTSE3BmYyDtFDAAIHitOETcKsdPEkT2DBQDYKyHB9Ba2\nQoidJiZgAQD2ys2VoqMDHyfEThMTsAAAe6WkWHetZwidJiZgAQD2u+IKa8YJodPEBCwAwH4ReJqY\nU8QAAPtF4GliZrAAAPtZeZrY7w+J08QELAAgOKw6TXz4sLRgQeDj2IyABQAEh5Wnibdtk/LzrRnL\nJgQsACB4rDpNXF8v5eS4+kQxAQsACB6rThNLpvGEi08Uc4oYABA8Vp4mllx9opgZLAAgeBpPE3s8\n1ozn4v7EBCwAILhycyWv15qxXNyfmIAFAARXSoqUlydFWRRBBw5YM47FCFgAQPBlZ0s//7k1Y8XH\nWzOOxQhYAIAzhg+X2rYNbAyvV+rZ05p6LMYpYgCAM6w4UcwpYgAAThDoiWKPR0pLc2W4SsxgAQBO\nKiuTUlOlQ4da/rNxcVJpqZScbHlZVmAGCwBwTuOJ4ri4lv1cXJz5OZeGqyTFOF0AACDCZWebP3Ny\nzHOtTS2sejzmYFNe3tGfcymWiAEA7rB1q+ktvGKFCVKf7+j3vF4TvGlpplGFi2eujQhYAIC77N9v\n2h9WVJgmEvHx5lGczEzXHmg6GQIWAAAbcMgJAAAbELAAANiAgAUAwAYELAAANiBgAQCwAQELAIAN\nCFgAAGxAwAIAYAMCFgAAGxCwAADYgIAFAMAGBCwAADYgYAEAsAEBCwCADQhYAABsQMACAGADAhYA\nABsQsAAA2ICABQDABgQsAAA2IGABALABAQsAgA0IWAAAbEDAAgBgAwIWAAAbELAAANiAgAUAwAYE\nLAAANiBgAQCwAQELAIANCFgAAGxAwAIAYAMCFgAAGxCwAADYgIAFAMAGBCwAADYgYAEAsAEBCwCA\nDf4/+wtytxRQdMIAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1076bc048>"
+       "<matplotlib.figure.Figure at 0x105963470>"
       ]
      },
      "metadata": {},
@@ -258,7 +259,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
