--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -14,10 +14,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05:36:48 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "05:36:48 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
-      "05:36:48 - Forest: INFO - Members of the prize file not present in the interactome:\n",
-      "05:36:48 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
+      "10:33:14 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "10:33:14 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
+      "10:33:14 - Forest: INFO - Members of the prize file not present in the interactome:\n",
+      "10:33:14 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -146,7 +146,7 @@
        "       12463, 12499, 12505, 12745, 12748, 16371], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -177,7 +177,7 @@
        "        54421, 126268, 240545], dtype=int32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -305,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
