grid search works I believe

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -14,10 +14,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10:33:14 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "10:33:14 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
-      "10:33:14 - Forest: INFO - Members of the prize file not present in the interactome:\n",
-      "10:33:14 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
+      "03:10:51 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "03:10:51 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
+      "03:10:51 - Forest: INFO - Members of the prize file not present in the interactome:\n",
+      "03:10:51 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
      ]
     }
    ],
@@ -28,6 +28,8 @@
     "import pandas as pd\n",
     "import networkx as nx\n",
     "from graph import *\n",
+    "from itertools import product\n",
+    "\n",
     "\n",
     "interactome_file = \"/Users/alex/Documents/OmicsIntegrator2/data/inbiomap_exp.normalized.cleaned.tsv\"\n",
     "prize_file = \"/Users/alex/Documents/OmicsIntegrator2/data/prizes.tsv\"\n",
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -102,7 +104,7 @@
        " 12748]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -283,9 +285,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
