Grid Search, and other improvements (#20)
* First pass at grid search

* sketch of what Grid Search would look like.

* just updating some docs .

* some refactoring and initial work on grid search

* take into account master branch's latest commit

* grid search works I believe

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -14,10 +14,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05:36:48 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "05:36:48 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
-      "05:36:48 - Forest: INFO - Members of the prize file not present in the interactome:\n",
-      "05:36:48 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
+      "03:10:51 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "03:10:51 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
+      "03:10:51 - Forest: INFO - Members of the prize file not present in the interactome:\n",
+      "03:10:51 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
      ]
     }
    ],
@@ -28,6 +28,8 @@
     "import pandas as pd\n",
     "import networkx as nx\n",
     "from graph import *\n",
+    "from itertools import product\n",
+    "\n",
     "\n",
     "interactome_file = \"/Users/alex/Documents/OmicsIntegrator2/data/inbiomap_exp.normalized.cleaned.tsv\"\n",
     "prize_file = \"/Users/alex/Documents/OmicsIntegrator2/data/prizes.tsv\"\n",
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -102,7 +104,7 @@
        " 12748]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -146,7 +148,7 @@
        "       12463, 12499, 12505, 12745, 12748, 16371], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -177,7 +179,7 @@
        "        54421, 126268, 240545], dtype=int32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
