Update Notebook and debug

--- a/example/Example_Usage.ipynb
+++ b/example/Example_Usage.ipynb
@@ -4,46 +4,55 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/alex/Documents/OmicsIntegrator2/venv/lib/python3.6/site-packages/matplotlib/font_manager.py:280: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  'Matplotlib is building the font cache using fc-list. '\n",
-      "12:00:04 - Forest: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "12:00:04 - Forest: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
-      "12:00:04 - Forest: INFO - Members of the prize file not present in the interactome:\n",
-      "12:00:04 - Forest: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
+      "02:40:23 - Graph: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "02:40:23 - Graph: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
+      "02:40:23 - Graph: INFO - Members of the prize file not present in the interactome:\n",
+      "02:40:23 - Graph: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
      ]
     }
    ],
    "source": [
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import networkx as nx\n",
-    "from graph import *\n",
-    "from itertools import product\n",
     "\n",
+    "from OmicsIntegrator import *\n",
     "\n",
     "interactome_file = \"/Users/alex/Documents/OmicsIntegrator2/data/inbiomap_exp.normalized.cleaned.tsv\"\n",
     "prize_file = \"/Users/alex/Documents/OmicsIntegrator2/data/prizes.tsv\"\n",
     "graph = Graph(interactome_file, {})\n",
     "\n",
-    "prizes, terminals, terminal_attributes = graph.prepare_prizes(prize_file)\n"
+    "graph.prepare_prizes(prize_file)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'terminals' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5541638f3e70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvertex_indices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medge_indices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpcsf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/OmicsIntegrator2/venv/lib/python3.6/site-packages/OmicsIntegrator-0.2.7-py3.6.egg/OmicsIntegrator/graph.py\u001b[0m in \u001b[0;36mpcsf\u001b[0;34m(self, pruning, verbosity_level)\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                 \u001b[0mall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 215\u001b[0;31m                 \u001b[0mothers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterminals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdummy_mode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'terminals'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mendpoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mterminals\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'terminals' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "vertex_indices, edge_indices = graph.pcsf(prizes)"
+    "vertex_indices, edge_indices = graph.pcsf()"
    ]
   },
   {
