tiny update of Example Usage

--- a/example/Example_Usage.ipynb
+++ b/example/Example_Usage.ipynb
@@ -18,10 +18,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:10:36 - Graph: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "11:10:36 - Graph: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
-      "11:10:36 - Graph: INFO - Members of the prize file not present in the interactome:\n",
-      "11:10:36 - Graph: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
+      "09:21:37 - Graph: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "09:21:37 - Graph: INFO - ['CTGF', 'EZR', 'HSPA5']\n",
+      "09:21:37 - Graph: INFO - Members of the prize file not present in the interactome:\n",
+      "09:21:37 - Graph: INFO - ['KIAA1543', 'PKM2', 'PLEC1', 'SFRS1']\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "\n",
     "from OmicsIntegrator import *\n",
     "\n",
-    "interactome_file = \"/Users/alex/Documents/OmicsIntegrator2/data/inbiomap_exp.normalized.cleaned.tsv\"\n",
+    "interactome_file = \"/Users/alex/Documents/OmicsIntegrator2/data/inbiomap_exp.normalized.cleaned.connected.tsv\"\n",
     "prize_file = \"/Users/alex/Documents/OmicsIntegrator2/data/prizes.tsv\"\n",
     "graph = Graph(interactome_file, {})\n",
     "\n",
